fixed card alignment

--- a/site/css/style.css
+++ b/site/css/style.css
@@ -367,6 +367,16 @@ section {
   }
 
 /*--------------------------------------------------------------
+# Projects
+--------------------------------------------------------------*/
+
+.card {
+  margin: 0 auto; /* Added */
+  float: none; /* Added */
+  margin-bottom: 10px; /* Added */
+}
+
+/*--------------------------------------------------------------
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
